Requires
~~~~~~~~
- lxml
New features
~~~~~~~~~~~~
-
Bug fixes
~~~~~~~~~
- #2035: work on lxml 2.1
- #2045: Absolute path to themes container is persistent
- #2034: provide "cherry picking" theme negociator
- #2032: removal of main content element if main content is empty
- #2031: wrong ordering of javascript inclusions
- #2030: bad exception raising if theme page not found
- #2028: cps:// URL scheme now works in stylesheets
- INSTALL.txt doc now explains how to install lxml through easy_install.
New internal features
~~~~~~~~~~~~~~~~~~~~~
- 