@@ -52,6 +52,7 @@ class TestingNegociator(EngineAdapter):
     def __init__(self, context, request):
         self.context = context
         self.request = request
+        self.void = False
 
     def getEngine(self):
         return TestingEngine()
