@@ -7,6 +7,7 @@ New features
 Bug fixes
 ~~~~~~~~~
 - #2035: work on lxml 2.1
+- #2040: handling of void responses
 - #2045: Absolute path to themes container is persistent
 - #2034: provide "cherry picking" theme negociator
 - #2032: removal of main content element if main content is empty
